--- a/resources/views/forms/fields/variable_number_button.antlers.html
+++ b/resources/views/forms/fields/variable_number_button.antlers.html
@@ -1,4 +1,4 @@
-<div x-data="variableNumberFieldtype" data-init="{{ init | to_json | entities }}" data-js="{{ js_driver }}" data-target="{{ handle }}">
+<div x-data="variableNumberFieldtype" data-init="{{ init | to_json | entities }}" data-js="{{ js_driver }}" data-target-container="" data-target="{{ handle }}">
     <div class="space-y-1">
         {{ options }}
             <button :class="{
@@ -34,7 +34,7 @@
                        x-ref="custom"
                        :tabindex="option === 'other' ? null : -1"
                        inputmode="tel"
-                       placeholder="{{ 'statamic-variable-number-fieldtype::fieldtype.components.custom.placeholder' | trans }}"
+                       placeholder="{{ placeholder }}"
                        min="{{ custom_min }}"
                        max="{{ custom_max }}">
             </div>
@@ -60,7 +60,7 @@
                        x-model.number="custom"
                        x-ref="custom"
                        inputmode="tel"
-                       placeholder="{{ 'statamic-variable-number-fieldtype::fieldtype.components.custom.placeholder' | trans }}"
+                       placeholder="{{ placeholder }}"
                        min="{{ custom_min }}"
                        max="{{ custom_max }}">
             </label>
