--- a/resources/views/forms/fields/variable_number_select.antlers.html
+++ b/resources/views/forms/fields/variable_number_select.antlers.html
@@ -1,4 +1,4 @@
-<div x-data="variableNumberFieldtype" data-init="{{ init | to_json | entities }}" data-js="{{ js_driver }}" data-target="{{ handle }}">
+<div x-data="variableNumberFieldtype" data-init="{{ init | to_json | entities }}" data-js="{{ js_driver }}" data-target-container="" data-target="{{ handle }}">
     <select name="{{ handle }}_options" x-model="option">
         <option>{{ 'statamic-variable-number-fieldtype::fieldtype.components.options.placeholder' | trans }}</option>
         {{ options }}
@@ -22,7 +22,7 @@
                            x-model.number="custom"
                            x-ref="custom"
                            inputmode="tel"
-                           placeholder="{{ 'statamic-variable-number-fieldtype::fieldtype.components.custom.placeholder' | trans }}"
+                           placeholder="{{ placeholder }}"
                            min="{{ custom_min }}"
                            max="{{ custom_max }}">
                 </div>
